# ietf-reviewtool

./: .editorconfig  .gitignore  README.md  ietf-reviewtool.py  ietf-reviewtool.sublime-project  pyproject.toml  setup.py  tests.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  lint.yml  lintly.yml  python-package.yml  python-publish.yml
ietf_reviewtool/: __init__.py  __main__.py  agenda.py  boilerplate.py  doc.py  grammar.py  ietf_reviewtool.py  inclusive.py  metadata.py  references.py  review.py
ietf_reviewtool/util/: docposition.py  fetch.py  format.py  patterns.py  text.py  utils.py
src/ietf_reviewtool/: __init__.py  ietf_reviewtool.py
tests/: __init__.py  tests.py
