[tool.poetry]
name = "ietf-reviewtool"
version = "0.4.1"
description = "Review tool for IETF documents"
authors = ["Lars Eggert <lars@eggert.org>"]
readme = "README.md"
homepage = "https://github.com/larseggert/ietf-reviewtool"
repository = "https://github.com/larseggert/ietf-reviewtool"
license = "GPL-2.0-only"

[tool.poetry.dependencies]
python = ">=3.11, <4"
requests-cache = ">=1.0.0"
appdirs = ">=1.4.4"
click = ">=7.1.2"
language-tool-python = ">=2.5.3"
PyYAML = ">=5.4.1"
charset-normalizer = ">=2.0.6"
urlextract = ">=1.5.0"
num2words = ">=0.5.10"
json-five = ">=0.8.0"
urllib3 = ">=1.26.15"
requests = ">=2.28.2"
setuptools = "^69.0.2"

[tool.poetry.dev-dependencies]
mypy = ">=0.942"

[tool.poetry.scripts]
irt = "ietf_reviewtool.ietf_reviewtool:cli"
ietf-reviewtool = "ietf_reviewtool.ietf_reviewtool:cli"

[tool.poetry.group.types.dependencies]
types-requests = "^2.31.0.0"
types-appdirs = "^1.4.3.5"
types-urllib3 = "^1.26.25.13"
types-click = "^7.1.8"
types-pyyaml = "^6.0.12.10"

[tool.pylint.messages_control]
# TODO: these are very high and should be gradually reduced during refactoring
max-args = 15
max-bool-expr = 10
max-branches = 80
max-locals = 50
max-module-lines = 1500
max-nested-blocks = 8
max-statements = 200
min-public-methods=0

[tool.pylint.format]
max-line-length = "88"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

