[project]
name = "ietf-reviewtool"
version = "0.6.0"
description = "Review tool for IETF documents"
authors = [{name = "Lars Eggert", email = "lars@eggert.org"}]
readme = "README.md"
license = {text = "GPL-2.0-only"}
requires-python = ">=3.11"
dependencies = [
    "platformdirs>=4.0.0",
    "language-tool-python>=3.0.0",
    "PyYAML>=5.4.1",
    "charset-normalizer>=2.0.6",
    "urlextract>=1.5.0",
    "num2words>=0.5.10",
    "httpx[http2]>=0.27.0",
    "hishel[async,httpx]>=0.0.31",
    "click-config-file>=0.6.0,<0.7.0",
    "rich-click>=1.9.7,<2.0.0",
    "darkdetect>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/larseggert/ietf-reviewtool"
Repository = "https://github.com/larseggert/ietf-reviewtool"

[project.scripts]
irt = "ietf_reviewtool.ietf_reviewtool:cli"
ietf-reviewtool = "ietf_reviewtool.ietf_reviewtool:cli"

[dependency-groups]
dev = [
    "mypy>=1.19.0,<3.0.0",
    "pylint>=4.0.4,<5.0.0",
    "ruff>=0.9.0",
]
types = [
    "types-appdirs>=1.4.3.5,<2.0.0",
    "types-click>=7.1.8,<8.0.0",
    "types-pyyaml>=6.0.12.10,<7.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = ["fixme"]
ignore = ["tests"]
# TODO: these are very high and should be gradually reduced during refactoring
max-args = 16
max-positional-arguments = 16
max-bool-expr = 10
max-branches = 80
max-locals = 50
max-module-lines = 1500
max-nested-blocks = 8
max-statements = 200
max-attributes = 13
min-public-methods = 0

[tool.pylint.format]
max-line-length = "88"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
